[package]
name = "yew-template"
description = "This crate allows you to separate your HTML from your Rust code when using Yew."
authors = ["Mubelotix <mubelotix@gmail.com>", "INSAgenda developers <devs@insagenda.fr>"]
readme = "README.md"
version = "0.6.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/INSAgenda/yew-template"

[lib]
proc-macro = true

[dependencies]
string-tools = "0.1"
html5ever = "0.26"
proc-macro-error = "1.0"
poreader = "1.1"
toml = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["config"]
config = ["toml", "serde"]

[dev-dependencies]
yew = "0.19"
