[package]
name = "yew-template"
description = "A crate for using separate HTML files as Yew objects, with support for seamless localization."
authors = ["Mubelotix <mubelotix@gmail.com>", "INSAgenda developers <devs@insagenda.fr>"]
categories = ["localization", "internationalization", "template-engine", "web-programming", "wasm"]
readme = "README.md"
version = "0.7.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/INSAgenda/yew-template"

[lib]
proc-macro = true

[dependencies]
string-tools = "0.1"
html5ever = "0.26"
proc-macro-error = "1.0"
poreader = { version = "1.1", optional = true }
toml = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["config", "i18n"]
config = ["toml", "serde"]
i18n = ["poreader"]

[dev-dependencies]
yew = "0.19"
